--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@vuelidate/core": "^2.0.0-alpha.33",
     "@vuelidate/validators": "^2.0.0-alpha.26",
     "autoprefixer": "^9.8.8",
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "postcss": "^7.0.39",
     "swiper": "^7.4.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.2.1",
     "vue-router": "^4.0.0-0",
-    "vue-ssr-carousel": "^0.2.2"
+    "vue-ssr-carousel": "^0.2.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
