--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "^3.4.0",
+    "@capacitor/core": "^3.4.0",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "@vuelidate/core": "^2.0.0-alpha.33",
@@ -26,6 +28,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@capacitor/cli": "^3.4.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
